ontol/ontol-compiler/test-cases/error/parser/def2.on
def() // ERROR parse error: expected symbol, found `(`
